fixed wrapping error pickupinstrauctions

--- a/assets/public/css/public.css
+++ b/assets/public/css/public.css
@@ -3705,7 +3705,7 @@
 }
 /* line 24, ../sass/partials/_lists.scss */
 .cb-wrapper .cb-list-content.cb-pickupinstructions div {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 /* line 28, ../sass/partials/_lists.scss */
 .cb-wrapper .cb-address.cb-location-pickupinstructions {
